<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:orientation="vertical"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:gravity="center"
android:background="@color/blue">

<!-- Icono de educación -->
<ImageView
    android:layout_width="150dp"
    android:layout_height="150dp"
    android:src="@drawable/logo"
    android:contentDescription="education_icon" />

<!-- Título de la aplicación -->
<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/education"
    android:textSize="24sp"
    android:textStyle="bold"
    android:textColor="@android:color/white"
    android:layout_marginTop="16dp" />


<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/mobileapp"
    android:textSize="18sp"
    android:textColor="@android:color/white"
    android:layout_marginTop="8dp" />


<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/fait_par"
    android:textSize="18sp"
    android:textStyle="bold"
    android:textColor="@android:color/white"
    android:layout_marginTop="16dp" />


<Button
    android:id="@+id/btn_get_started"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/started"
    android:textStyle="bold"
    android:backgroundTint="@color/white"
    android:textColor="@color/blue"
    android:layout_marginTop="24dp" />

</LinearLayout>
