<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="35dp"
    android:background="@color/white"
    android:orientation="vertical">


    <ImageView
        android:id="@+id/logoMaisonneuve"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:src="@drawable/logoazul" />
    <!-- Título -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingBottom="40dp"
        android:text="@string/inscription_titre"
        android:textColor="@color/blue"
        android:textSize="20sp"
        android:textStyle="bold" />

    <!-- Label pour le Spinner -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:text="@string/selectionner_cours"
        android:textSize="16sp"
        android:textStyle="bold" />

    <!-- Spinner pour sélectionner le cours -->
    <Spinner
        android:id="@+id/spinner_courses"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@color/backcard"
        android:padding="10dp" />

    <!-- Bouton Inscription -->
    <Button
        android:id="@+id/inscriptionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/blue"
        android:elevation="4dp"
        android:padding="12dp"
        android:text="@string/inscrire_button"
        android:textColor="@android:color/white" />

</LinearLayout>
