<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="0dp">

    <include layout="@layout/toolbar"/>

    <!-- CardView que encapsula toda la información del curso -->
    <androidx.cardview.widget.CardView
        android:id="@+id/courseInfoCard"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="30dp"
        app:cardCornerRadius="16dp"
        app:cardElevation="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <!-- Layout para los detalles del curso dentro del CardView -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <!-- Imagen del curso -->
            <ImageView
                android:id="@+id/imageCours"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:scaleType="centerCrop"
                android:src="@drawable/courseimage"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <!-- Título del curso -->
            <TextView
                android:id="@+id/nomcourstext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/titre"
                android:textSize="35sp"
                android:textStyle="bold"
                android:textColor="@color/blue"
                app:layout_constraintTop_toBottomOf="@id/imageCours"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="16dp" />

            <!-- Descripción del curso -->
            <TextView
                android:id="@+id/siglecourstext"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/hint_description"
                android:backgroundTint="@color/gray"
                android:textSize="16sp"
                android:layout_margin="10dp"
                android:paddingBottom="10dp"
                android:textColor="@android:color/black"
                app:layout_constraintTop_toBottomOf="@id/nomcourstext"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <!-- Fechas del curso -->
            <TextView
                android:id="@+id/sessioncours"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hint_debut_fin"
                android:textSize="16sp"
                android:textColor="@android:color/black"
                app:layout_constraintTop_toBottomOf="@id/siglecourstext"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="8dp" />

            <!-- Nombre del profesor -->
            <TextView
                android:id="@+id/enseignanttext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hint_enseignant"
                android:textSize="16sp"
                android:textColor="@android:color/black"
                app:layout_constraintTop_toBottomOf="@id/sessioncours"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="8dp" />

            <!-- Botones para el material del curso y los estudiantes -->
            <Button
                android:id="@+id/fileName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Documents"
                android:backgroundTint="@color/blue"
                android:textColor="@android:color/white"
                app:layout_constraintTop_toBottomOf="@id/enseignanttext"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toStartOf="@+id/quizButton" />

            <Button
                android:id="@+id/list_students"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnEtudiants"
                android:backgroundTint="@color/orange"
                android:textColor="@android:color/white"
                app:layout_constraintTop_toBottomOf="@id/fileName"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="16dp" />

            <Button
                android:id="@+id/quizButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:backgroundTint="@color/blue"
                android:text="@string/quiz"
                android:textColor="@android:color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/fileName"
                app:layout_constraintTop_toBottomOf="@id/enseignanttext" />

            <ImageButton
                android:id="@+id/btntakequiz"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:layout_marginTop="16dp"
                android:contentDescription="@string/quiz"
                android:src="@drawable/takequiz"
                app:layout_constraintTop_toBottomOf="@id/enseignanttext"
                app:layout_constraintEnd_toEndOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>
